# idle_champions_client_licc

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml  security-audit.yml
examples/: against_localdev.rs  get_codes.rs  insert_code.rs
src/: api_key.rs  client.rs  lib.rs  write.rs
tests/: integration_remote_api.rs
