[package]
name = "licc"
description = "Liefland Idle Champions Codes - Client for the liefland codes API service for Idle Champions of the Forgotten Realms chest codes"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Zarthus <zarthus@liefland.net>",
]
repository = "https://github.com/Liefland/idle_champions_client_licc"
homepage = "https://github.com/Liefland/idle_champions_client_licc"
categories = ["games", "web-programming::http-client"]
keywords = ["idle_champions", "http_client"]
readme = "README.md"
publish = true

[dependencies]
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.112" }

[dev-dependencies]
tokio = { version = "1.11.0", features = ["macros"] }

[features]
default = [
]
readonly = [] # with this feature enabled, the write operations are gone and the need for API key is nullified

[badges]
